^writing game almost finished

--- a/web/modules/buddy_profile_wizard/assets/html/inputform.html
+++ b/web/modules/buddy_profile_wizard/assets/html/inputform.html
@@ -78,9 +78,9 @@
 
 <div class="login">
   <div class="login_inner">
-    <label for="er_wizzard_text_input">Text</label>
+    <label for="er_wizzard_text_input">Answer:</label>
     <br>
-    <textarea id="er_wizzard_text_input" class="er_wizzard_text_input"></textarea>
+    <textarea id="er_wizzard_text_input" class="er_wizzard_text_input" spellcheck="false"></textarea>
     <!--<button type="button" class="answer_button">Submit</button>-->
   </div>
 
